--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -124,6 +124,7 @@
   "global.duration.months": "月",
   "global.duration.seconds": "秒",
   "global.duration.years": "年",
+  "global.errors.failureAlert": "!!!Failure Alert",
   "global.errors.fieldIsRequired": "必須フィールドです",
   "global.errors.incompleteMnemonic": "{expected}語を入力して下さい。",
   "global.errors.invalidEmail": "入力されたメールアドレスは無効です。確認してください。",
@@ -141,6 +142,7 @@
   "global.labels.close": "閉じる",
   "global.labels.create": "作成",
   "global.labels.filter": "フィルター",
+  "global.labels.readMore": "!!!Read More",
   "global.labels.remove": "削除",
   "global.labels.reset": "リセット",
   "global.labels.save": "保存する",
@@ -512,6 +514,7 @@
   "static.about.copyright": "Input Output HK Limited. Licensed under",
   "static.about.license": "Apache 2.0 license",
   "static.about.title": "Daedalus",
+  "static.dummy.markdown": "!!!Content",
   "static.splash.network.buttonLabel": "了解しました",
   "static.splash.network.flightDescription1": "Daedalus Flightウォレットをダウンロードいただきありがとうございます。このDaedalusバージョンは、Daedalusウォレットの製品バージョンをメインネットへリリースする前に、ユーザーが新機能をテストし、開発チームが使用性に関するバグに対処するために特別に作成したバージョンです。",
   "static.splash.network.flightDescription2": "Flight候補版は機能性をテストするためにデザインされていますが、これはメインネットに接続されており、<b>メインネットのADAを使用します。Flight候補版を使用して実行されるトランザクションでは実際のADAによる支払いが生じます。</b>パワーユーザー以外は、完全にテスト済みの安定した製品版Daedalusウォレットの使用を継続することを推奨します。Daedalus Flightウォレットで実行されるトランザクションは実際のものであり、すべてのトランザクションはCardanoブロックチェーンにメインネット上で検証されるため、ユーザーの資金は実際に送金されるということを十分に理解してください。",
@@ -913,6 +916,9 @@
   "wallet.transaction.addresses.from": "送信元アドレス",
   "wallet.transaction.addresses.to": "送信先",
   "wallet.transaction.conversion.rate": "両替率",
+  "wallet.transaction.failed.cancelFailedTxnNote": "トランザクションはCardanoネットワークに送信されましたが、期限切れのため失敗しました。Cardanoネットワークのトランザクションには「time to live（有効期限）」属性があり、ネットワークがトランザクションを処理する前にこれを経過しました。このトランザクションに使用されたファンド（UTXO）をリリースして別のトランザクションで使用可能にするために、このトランザクションを削除してください。",
+  "wallet.transaction.failed.cancelFailedTxnSupportArticle": "このトランザクションをキャンセルする理由",
+  "wallet.transaction.failed.removeTransactionButton": "失敗したトランザクションを削除する",
   "wallet.transaction.filter.allTransactions": "すべてのトランザクション",
   "wallet.transaction.filter.amountRange": "ADA額",
   "wallet.transaction.filter.apply": "適用する",
@@ -929,13 +935,14 @@
   "wallet.transaction.filter.thisYear": "今年",
   "wallet.transaction.noInputAddressesLabel": "アドレスなし",
   "wallet.transaction.pending.cancelPendingTxnNote": "このトランザクションは長時間処理中となっています。このトランザクションに使用されている資金を解放するために、トランザクションのキャンセルを試みることができます。",
+  "wallet.transaction.pending.cancelPendingTxnSupportArticle": "このトランザクションをキャンセルする理由",
   "wallet.transaction.pending.cancelTransactionButton": "処理中のトランザクションをキャンセルする",
-  "wallet.transaction.pending.supportArticleLink": "このトランザクションをキャンセルする理由",
   "wallet.transaction.pending.supportArticleUrl": "https://iohk.zendesk.com/hc/ja/articles/360038113814",
   "wallet.transaction.received": "{currency}入金",
   "wallet.transaction.rewards.from": "送信元報酬",
   "wallet.transaction.sent": "{currency}送金",
   "wallet.transaction.state.confirmed": "トランザクション承認済み",
+  "wallet.transaction.state.failed": "トランザクション失敗",
   "wallet.transaction.state.pending": "トランザクション処理中",
   "wallet.transaction.transactionAmount": "トランザクション額",
   "wallet.transaction.transactionId": "トランザクションID",
