--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -124,6 +124,7 @@
   "global.duration.months": "months",
   "global.duration.seconds": "seconds",
   "global.duration.years": "years",
+  "global.errors.failureAlert": "!!!Failure Alert",
   "global.errors.fieldIsRequired": "This field is required.",
   "global.errors.incompleteMnemonic": "Please enter all {expected} words.",
   "global.errors.invalidEmail": "Invalid email entered, please check.",
@@ -141,6 +142,7 @@
   "global.labels.close": "Close",
   "global.labels.create": "Create",
   "global.labels.filter": "Filter",
+  "global.labels.readMore": "!!!Read More",
   "global.labels.remove": "Remove",
   "global.labels.reset": "Reset",
   "global.labels.save": "Save",
@@ -512,6 +514,7 @@
   "static.about.copyright": "Input Output HK Limited. Licensed under",
   "static.about.license": "Apache 2.0 license",
   "static.about.title": "Daedalus",
+  "static.dummy.markdown": "!!!Content",
   "static.splash.network.buttonLabel": "I understand",
   "static.splash.network.flightDescription1": "Thank you for downloading the Daedalus Flight wallet! This version of Daedalus is specially created so users can test new features and we can squash usability bugs before pushing releases to the mainnet production version of the Daedalus wallet. ",
   "static.splash.network.flightDescription2": "Although Flight candidates are designed to test functionality, this is on the mainnet and will <b>be using mainnet ada. Transactions made using Flight candidates will be real ada payments.</b> If you are not a power user, we recommend you stick to using our stable, fully-tested production Daedalus wallet client. It is very important to note that transactions performed in Daedalus Flight are real and your funds will be transferred because the Cardano blockchain will be validating all transactions on mainnet.",
@@ -913,6 +916,9 @@
   "wallet.transaction.addresses.from": "From addresses",
   "wallet.transaction.addresses.to": "To addresses",
   "wallet.transaction.conversion.rate": "Conversion rate",
+  "wallet.transaction.failed.cancelFailedTxnNote": "This transaction was submitted to the Cardano network, but it failed as it had expired. Transactions on the Cardano network have a ‘time to live’ attribute, which had passed before the network processed the transaction. You need to remove it to release the funds (UTXOs) used by this transaction for use in another transaction.",
+  "wallet.transaction.failed.cancelFailedTxnSupportArticle": "Why should I cancel failed transactions?",
+  "wallet.transaction.failed.removeTransactionButton": "Remove failed transaction",
   "wallet.transaction.filter.allTransactions": "All Transactions",
   "wallet.transaction.filter.amountRange": "Amount of ada",
   "wallet.transaction.filter.apply": "Apply",
@@ -929,13 +935,14 @@
   "wallet.transaction.filter.thisYear": "This year",
   "wallet.transaction.noInputAddressesLabel": "No addresses",
   "wallet.transaction.pending.cancelPendingTxnNote": "This transaction has been pending for a long time. To release the funds used by this transaction, you can try canceling it.",
+  "wallet.transaction.pending.cancelPendingTxnSupportArticle": "Why should I cancel this transaction?",
   "wallet.transaction.pending.cancelTransactionButton": "Cancel pending transaction",
-  "wallet.transaction.pending.supportArticleLink": "Why should I cancel this transaction?",
   "wallet.transaction.pending.supportArticleUrl": "https://iohk.zendesk.com/hc/en-us/articles/360038113814",
   "wallet.transaction.received": "{currency} received",
   "wallet.transaction.rewards.from": "From rewards",
   "wallet.transaction.sent": "{currency} sent",
   "wallet.transaction.state.confirmed": "Transaction confirmed",
+  "wallet.transaction.state.failed": "Transaction failed",
   "wallet.transaction.state.pending": "Transaction pending",
   "wallet.transaction.transactionAmount": "Transaction amount",
   "wallet.transaction.transactionId": "Transaction ID",
