--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -302,7 +302,7 @@
   "staking.delegationCenter.or": "または",
   "staking.delegationCenter.redelegate": "再設定する",
   "staking.delegationCenter.removeDelegation": "委任を解除する",
-  "staking.delegationCenter.stakePoolTooltipTickerEarningRewards": "報酬を獲得中",
+  "staking.delegationCenter.stakePoolTooltipTickerEarningRewards": "現在報酬を獲得中",
   "staking.delegationCenter.stakePoolTooltipTickerEpoch": "エポック{fromEpoch}より",
   "staking.delegationCenter.syncingTooltipLabel": "同期中 {syncingProgress}%",
   "staking.delegationCenter.totalSlots": "総スロット数",
