--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -653,6 +653,9 @@
   "wallet.hardware.deviceStatus.trezor_bridge_failure.link.label": "Installation instructions",
   "wallet.hardware.deviceStatus.trezor_bridge_failure.link.url": "https://wallet.trezor.io/#/bridge",
   "wallet.hardware.deviceStatus.unsupported_device": "The device is not supported!",
+  "wallet.hardware.deviceStatus.verifying_address": "Verify address on your \"{walletName}\" device",
+  "wallet.hardware.deviceStatus.verifying_address_failed": "Address verification failed",
+  "wallet.hardware.deviceStatus.verifying_address_succeeded": "Address verified",
   "wallet.hardware.deviceStatus.verifying_transaction": "Confirm the transaction using the \"{walletName}\" device",
   "wallet.hardware.deviceStatus.verifying_transaction_failed": "Transaction confirmation failed",
   "wallet.hardware.deviceStatus.verifying_transaction_succeeded": "Transaction confirmed",
