[DDW-491] Add Japanese translations

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -654,9 +654,9 @@
   "wallet.hardware.deviceStatus.trezor_bridge_failure.link.label": "インストールガイド",
   "wallet.hardware.deviceStatus.trezor_bridge_failure.link.url": "https://wallet.trezor.io/#/bridge",
   "wallet.hardware.deviceStatus.unsupported_device": "このデバイスはサポートされていません",
-  "wallet.hardware.deviceStatus.verifying_address": "!!!Verify address on your \"{walletName}\" device",
-  "wallet.hardware.deviceStatus.verifying_address_failed": "!!!Address verification failed",
-  "wallet.hardware.deviceStatus.verifying_address_succeeded": "!!!Address verified",
+  "wallet.hardware.deviceStatus.verifying_address": "「{walletName}」デバイスのアドレスを検証してください",
+  "wallet.hardware.deviceStatus.verifying_address_failed": "アドレスが検証できません",
+  "wallet.hardware.deviceStatus.verifying_address_succeeded": "アドレスが検証されました",
   "wallet.hardware.deviceStatus.verifying_transaction": "「{walletName}」デバイスを使ってトランザクションを確認してください",
   "wallet.hardware.deviceStatus.verifying_transaction_failed": "デバイスの確認ができません",
   "wallet.hardware.deviceStatus.verifying_transaction_succeeded": "トランザクションが確認されました",
