[DDW-497] Add Japanese translations

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -135,8 +135,8 @@
   "global.errors.rewardsOpenCsvError": "置き換えようとしているファイルが開いています。ファイルを閉じてからもう一度お試しください。",
   "global.errors.strongSpendingPassword": "強い",
   "global.errors.weakSpendingPassword": "弱い",
-  "global.info.knownMnemonicWordCount": "!!!{actual} of {required} words entered",
-  "global.info.unknownMnemonicWordCount": "!!!{actual} words entered",
+  "global.info.knownMnemonicWordCount": "{actual}/{required}語入力済み",
+  "global.info.unknownMnemonicWordCount": "{actual}語入力済み",
   "global.labels.all": "すべて",
   "global.labels.cancel": "キャンセル",
   "global.labels.change": "変更",
