DDW-500 Implement design for native tokens - adding Wallet native tokens summary page to storybook

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -915,6 +915,7 @@
   "wallet.summary.page.showMoreTransactionsButtonLabel": "もっと表示",
   "wallet.summary.page.syncingTransactionsMessage": "ウォレットのトランザクション履歴は現在ブロックチェーンと同期中です。",
   "wallet.summary.page.todayLabel": "今日",
+  "wallet.summary.page.tokensTitle": "トークン",
   "wallet.summary.page.transactionsLabel": "トランザクション数",
   "wallet.summary.page.yesterdayLabel": "昨日",
   "wallet.transaction.address.from": "送信元",
