[DDW-497] Improve Mnemonic Phrase Input UX (#2280)
* [DDW-497] Improve mnemonic phrase input ux

* [DDW-497] Add changelog entry

* [DDW-497] Cleanup leftovers

* [DDW-497] Setup English translations

* [DDW-497] Add Japanese translations

* [DDW-497] Introduce improved mnemonics validation

* [DDW-497] Refactor mnemonics validation everywhere

* [DDW-497] Support pluralization for mnemonic info

* [DDW-497] Fix English pluralization

* [DDW-497] Fix required mnemonics label style issues

* [DDW-497] Fixes yarn.lock

Co-authored-by: Nikola Glumac <niglumac@gmail.com>

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -125,7 +125,6 @@
   "global.duration.seconds": "秒",
   "global.duration.years": "年",
   "global.errors.fieldIsRequired": "必須フィールドです",
-  "global.errors.incompleteMnemonic": "{expected}語を入力して下さい。",
   "global.errors.invalidEmail": "入力されたメールアドレスは無効です。確認してください。",
   "global.errors.invalidMnemonic": "入力されたフレーズは無効です。確認してください。",
   "global.errors.invalidRepeatPassword": "一致しません",
@@ -135,6 +134,8 @@
   "global.errors.rewardsOpenCsvError": "置き換えようとしているファイルが開いています。ファイルを閉じてからもう一度お試しください。",
   "global.errors.strongSpendingPassword": "強い",
   "global.errors.weakSpendingPassword": "弱い",
+  "global.info.knownMnemonicWordCount": "{actual}/{required}語入力済み",
+  "global.info.unknownMnemonicWordCount": "{actual}語入力済み",
   "global.labels.all": "すべて",
   "global.labels.cancel": "キャンセル",
   "global.labels.change": "変更",
@@ -749,7 +750,6 @@
   "wallet.restore.dialog.step.configuration.input.walletName.label": "ウォレット名",
   "wallet.restore.dialog.step.configuration.input.walletName.placeholder": "復元するウォレット名を選んでください",
   "wallet.restore.dialog.step.mnemonics.autocomplete.continueButtonLabel": "復元フレーズを確認する",
-  "wallet.restore.dialog.step.mnemonics.autocomplete.incompleteMultiLengthPhrase": "12語、18語、または24語",
   "wallet.restore.dialog.step.mnemonics.autocomplete.invalidRecoveryPhrase": "無効な復元フレーズ",
   "wallet.restore.dialog.step.mnemonics.autocomplete.multiLengthPhrase.placeholder": "12語、18語、または24語のウォレット復元フレーズを入力してください",
   "wallet.restore.dialog.step.mnemonics.autocomplete.noResults": "該当するフレーズは見つかりませんでした",
