--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -125,7 +125,6 @@
   "global.duration.seconds": "seconds",
   "global.duration.years": "years",
   "global.errors.fieldIsRequired": "This field is required.",
-  "global.errors.incompleteMnemonic": "Please enter all {expected} words.",
   "global.errors.invalidEmail": "Invalid email entered, please check.",
   "global.errors.invalidMnemonic": "Invalid phrase entered, please check.",
   "global.errors.invalidRepeatPassword": "Doesn't match",
@@ -135,6 +134,8 @@
   "global.errors.rewardsOpenCsvError": "The file you are trying to replace is open. Please close it and try again.",
   "global.errors.strongSpendingPassword": "Strong",
   "global.errors.weakSpendingPassword": "Weak",
+  "global.info.knownMnemonicWordCount": "{actual} of {required} {required, plural, one {word} other {words}} entered",
+  "global.info.unknownMnemonicWordCount": "{actual} {actual, plural, one {word} other {words}} entered",
   "global.labels.all": "All",
   "global.labels.cancel": "Cancel",
   "global.labels.change": "Change",
@@ -749,7 +750,6 @@
   "wallet.restore.dialog.step.configuration.input.walletName.label": "Wallet name",
   "wallet.restore.dialog.step.configuration.input.walletName.placeholder": "Name the wallet you are restoring",
   "wallet.restore.dialog.step.mnemonics.autocomplete.continueButtonLabel": "Check recovery phrase",
-  "wallet.restore.dialog.step.mnemonics.autocomplete.incompleteMultiLengthPhrase": "12, 18 or 24 words",
   "wallet.restore.dialog.step.mnemonics.autocomplete.invalidRecoveryPhrase": "Invalid recovery phrase",
   "wallet.restore.dialog.step.mnemonics.autocomplete.multiLengthPhrase.placeholder": "Enter your 12, 18 or 24-word recovery phrase",
   "wallet.restore.dialog.step.mnemonics.autocomplete.noResults": "No results",
