DDW-500 Implement design for native tokens - adding Wallet native tokens summary page to storybook

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -915,6 +915,7 @@
   "wallet.summary.page.showMoreTransactionsButtonLabel": "Show more transactions",
   "wallet.summary.page.syncingTransactionsMessage": "Your transaction history for this wallet is being synced with the blockchain.",
   "wallet.summary.page.todayLabel": "Today",
+  "wallet.summary.page.tokenSendButton": "Send",
   "wallet.summary.page.tokensTitle": "Tokens",
   "wallet.summary.page.transactionsLabel": "Number of transactions",
   "wallet.summary.page.yesterdayLabel": "Yesterday",
